# sortasound

./: .gitignore  CMakeLists.txt  LICENSE  README.md
doc/: algorithms.md
include/: fm.hpp  keyboardwidget.hpp  mainwindow.hpp  presets.hpp  tracker.hpp
include/fm/: fm.hpp  presets.hpp
include/theme/: theme.hpp
include/widget/: keyboard.hpp  operator.hpp
include/window/: main.hpp  tracker.hpp
src/: algorithms.cpp  fm.cpp  keyboardwidget.cpp  main.cpp  mainwindow.cpp  mainwindow_controls.cpp  mainwindow_internals.cpp  mainwindow_synthesizer.cpp  mainwindow_ui_setup.cpp  presets.cpp  tracker.cpp
src/fm/: algorithms.cpp  fm.cpp  presets.cpp
src/theme/: theme.cpp
src/widget/: keyboard.cpp  operator.cpp
src/window/: controls.cpp  internals.cpp  main.cpp  setup.cpp  synthesizer.cpp  tracker.cpp
